[gd_scene load_steps=33 format=2]

[ext_resource path="res://worlds/world_urban/images/IMG_0854.PNG" type="Texture" id=1]
[ext_resource path="res://worlds/world_urban/images/IMG_0858.PNG" type="Texture" id=2]
[ext_resource path="res://worlds/world_urban/images/IMG_0855.PNG" type="Texture" id=3]
[ext_resource path="res://worlds/world_urban/images/IMG_0856.PNG" type="Texture" id=4]
[ext_resource path="res://worlds/world_urban/images/IMG_0857.PNG" type="Texture" id=5]
[ext_resource path="res://worlds/world_urban/WorldUrban.gd" type="Script" id=6]
[ext_resource path="res://worlds/world_urban/images/IMG_0853.PNG" type="Texture" id=7]
[ext_resource path="res://worlds/world_urban/images/IMG_0859.PNG" type="Texture" id=8]
[ext_resource path="res://components/ParallaxSprite.gd" type="Script" id=9]
[ext_resource path="res://worlds/world_urban/lightning/01/IMG_0880.PNG" type="Texture" id=10]
[ext_resource path="res://worlds/world_urban/lightning/01/IMG_0883.PNG" type="Texture" id=11]
[ext_resource path="res://worlds/world_urban/lightning/01/IMG_0886.PNG" type="Texture" id=12]
[ext_resource path="res://worlds/world_urban/lightning/01/IMG_0881.PNG" type="Texture" id=13]
[ext_resource path="res://worlds/world_urban/lightning/01/IMG_0882.PNG" type="Texture" id=14]
[ext_resource path="res://worlds/world_urban/lightning/01/IMG_0884.PNG" type="Texture" id=15]
[ext_resource path="res://worlds/world_urban/lightning/01/IMG_0885.PNG" type="Texture" id=16]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0887.PNG" type="Texture" id=17]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0889.PNG" type="Texture" id=18]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0894.PNG" type="Texture" id=19]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0888.PNG" type="Texture" id=20]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0891.PNG" type="Texture" id=21]
[ext_resource path="res://worlds/world_urban/lightning/03/IMG_0896.PNG" type="Texture" id=22]
[ext_resource path="res://worlds/world_urban/lightning/03/IMG_0899.PNG" type="Texture" id=23]
[ext_resource path="res://worlds/world_urban/lightning/03/IMG_0900.PNG" type="Texture" id=24]
[ext_resource path="res://worlds/world_urban/lightning/03/IMG_0895.PNG" type="Texture" id=25]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0892.PNG" type="Texture" id=26]
[ext_resource path="res://worlds/world_urban/lightning/03/IMG_0897.PNG" type="Texture" id=27]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0890.PNG" type="Texture" id=28]
[ext_resource path="res://worlds/world_urban/lightning/03/IMG_0898.PNG" type="Texture" id=29]
[ext_resource path="res://worlds/world_urban/lightning/02/IMG_0893.PNG" type="Texture" id=30]
[ext_resource path="res://worlds/world_urban/lightning/03/IMG_0901.PNG" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "01",
"speed": 30.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 30 ), ExtResource( 19 ), ExtResource( 19 ) ],
"loop": false,
"name": "02",
"speed": 30.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 24 ), ExtResource( 31 ), ExtResource( 31 ) ],
"loop": false,
"name": "03",
"speed": 30.0
} ]

[node name="BiomeDark" type="Node2D"]
script = ExtResource( 6 )

[node name="Sky" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false
script = ExtResource( 9 )
own_speed_factor = 0.0

[node name="Clouds" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 9 )
own_speed_factor = -1.0

[node name="Dust" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
script = ExtResource( 9 )
own_speed_factor = -3.0

[node name="Light" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
script = ExtResource( 9 )
own_speed_factor = -5.0

[node name="Mountains1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.301961 )
texture = ExtResource( 5 )
centered = false
script = ExtResource( 9 )
own_speed_factor = -8.0

[node name="Mountains2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.4 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 9 )
own_speed_factor = -13.0

[node name="Lightning" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
animation = "03"
centered = false

[node name="LightningTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MiddleGround" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
script = ExtResource( 9 )
own_speed_factor = -30.0

[connection signal="animation_finished" from="Lightning" to="." method="_on_Lightning_animation_finished"]
[connection signal="timeout" from="LightningTimer" to="." method="_on_Timer_timeout"]
